--- a/mpl-frontend/src/components/Scorecard.css
+++ b/mpl-frontend/src/components/Scorecard.css
@@ -80,7 +80,7 @@
 .scorecard-table .runs,
 .scorecard-table .balls,
 .scorecard-table .fours,
-.scorecard-table .sixes,
+.scorecard-table .twos,
 .scorecard-table .strike-rate,
 .scorecard-table .overs,
 .scorecard-table .maidens,
